Design and literature review updates

--- a/Bibliographie/Bibliographie.bib
+++ b/Bibliographie/Bibliographie.bib
@@ -55,16 +55,6 @@ Two-Wheeled Inverted Pendulum Robot},
 	type = {Masterarbeit}
 }
 
-@article{kim2015dynamic,
-  title={Dynamic modeling and control of a two-wheeled inverted pendulum mobile robot},
-  author={Kim, Hyun-Soo and Kim, Jong-Hwan},
-  journal={IEEE Transactions on Control Systems Technology},
-  volume={24},
-  number={1},
-  pages={1--14},
-  year={2015},
-  publisher={IEEE}
-}
 
 %handel boston dynamics picture website link https://www.bostondynamics.com/handle
 @misc{handle,
@@ -82,4 +72,135 @@ Two-Wheeled Inverted Pendulum Robot},
   pages={7515--7521},
   year={2019},
   organization={IEEE}
+}
+
+@inproceedings{nath2017design,
+  title={Design, implementation and stabilization of a Bipedal robot},
+  author={Nath, Alok and Das, Goutam and Mallick, Anik and Chowdhury, Shovan},
+  booktitle={AIP Conference Proceedings},
+  volume={1919},
+  number={1},
+  year={2017},
+  organization={AIP Publishing}
+}
+
+@article{warnakulasooriya2012bipedal,
+  title={Bipedal walking robot-A developmental design},
+  author={Warnakulasooriya, Sujan and Bagheri, Amin and Sherburn, Nathan and Shanmugavel, Madhavan},
+  journal={Procedia engineering},
+  volume={41},
+  pages={1016--1021},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@inproceedings{madadi2007design,
+  title={Design and development of a biped robot},
+  author={Madadi, Vishnu Vardhan and Tosunoglu, Sabri},
+  booktitle={2007 International Symposium on Computational Intelligence in Robotics and Automation},
+  pages={243--247},
+  year={2007},
+  organization={IEEE}
+}
+
+%cite asimo robot
+@misc{asimo,
+  title={Asimo},
+  author={Honda},
+  year={2021},
+  howpublished={\url{https://asimo.honda.com/}},
+  note={Accessed: 2021-08-01}
+}
+
+% cite atlas robot
+@misc{atlas,
+  title={Atlas},
+  author={Boston Dynamics},
+  year={2021},
+  howpublished={\url{https://www.bostondynamics.com/atlas}},
+  note={Accessed: 2021-08-01}
+}
+
+% cite sonys qrio robot
+@misc{qrio,
+  title={Qrio},
+  author={Sony},
+  year={2021},
+  howpublished={\url{https://www.sony.net/SonyInfo/technology/technology/theme/qrio/}},
+  note={Accessed: 2021-08-01}
+}
+
+@article{guo2022design,
+  title={Design and dynamic analysis of jumping wheel-legged robot in complex terrain environment},
+  author={Guo, Tiezheng and Liu, Jinhui and Liang, Haonan and Zhang, Yitong and Chen, Wei and Xia, Ximing and Wang, Meiqing and Wang, Zhiming},
+  journal={Frontiers in Neurorobotics},
+  volume={16},
+  pages={1066714},
+  year={2022},
+  publisher={Frontiers}
+}
+
+@article{zhang2022dynamic,
+  title={Dynamic wheeled motion control of wheel-biped transformable robots},
+  author={Zhang, Chao and Liu, Tangyou and Song, Shuang and Wang, Jiaole and Meng, Max Q-H},
+  journal={Biomimetic Intelligence and Robotics},
+  volume={2},
+  number={2},
+  pages={100027},
+  year={2022},
+  publisher={Elsevier}
+}
+
+
+@article{cui2022modeling,
+  title={Modeling and control of a wheeled biped robot},
+  author={Cui, Zemin and Xin, Yaxian and Liu, Shuyun and Rong, Xuewen and Li, Yibin},
+  journal={Micromachines},
+  volume={13},
+  number={5},
+  pages={747},
+  year={2022},
+  publisher={MDPI}
+}
+
+
+@inproceedings{hsu2022implementation,
+  title={Implementation and Control of a Wheeled Bipedal Robot Using a Fuzzy Logic Approach},
+  author={Hsu, Chun-Fei and Chen, Bo-Rui and Lin, Zi-Ling},
+  booktitle={Actuators},
+  volume={11},
+  number={12},
+  pages={357},
+  year={2022},
+  organization={MDPI}
+}
+
+
+@inproceedings{xin2020online,
+  title={Online dynamic motion planning and control for wheeled biped robots},
+  author={Xin, Songyan and Vijayakumar, Sethu},
+  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={3892--3899},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{klokowski2023evobot,
+  title={evoBOT--Design and Learning-Based Control of a Two-Wheeled Compound Inverted Pendulum Robot},
+  author={Klokowski, Patrick and E{\ss}er, Julian and Gramse, Nils and Pschera, Benedikt and Plitt, Marc and Feldmeier, Frido and Bajpai, Shubham and Jestel, Christian and Bach, Nicolas and Urbann, Oliver and others},
+  booktitle={2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={10425--10432},
+  year={2023},
+  organization={IEEE}
+}
+
+
+@article{kim2015dynamic,
+  title={Dynamic modeling of a two-wheeled inverted pendulum balancing mobile robot},
+  author={Kim, Sangtae and Kwon, SangJoo},
+  journal={International Journal of Control, Automation and Systems},
+  volume={13},
+  pages={926--933},
+  year={2015},
+  publisher={Springer}
 }
