--- a/Content/Mechanical Design.tex
+++ b/Content/Mechanical Design.tex
@@ -142,6 +142,7 @@ Different design features were considered, such as the cable management, the fas
 	\caption[Side view of the Body Design]{side view of the Body Design}
 	\label{fig:bodydesign2}
 \end{figure}
+\vspace{10cm}
 %figure 3 for the body design
 \begin{figure}[h]
 	\centering
@@ -178,7 +179,7 @@ The motor housing is designed to ensure the fixed placement of the motor inside 
 	\label{fig:bodykneelink3}
 \end{figure}
 
-
+\newpage
 \subsection{Knee Wheel Link Design}
 % Discuss the design of the Wheel_Knee_link.
 This link connects the knee axis to the wheel axis. The design of this link includes the wheel motor mounting form one-side and a frame to attach to the output horn of the knee motor from the other side.
@@ -204,6 +205,59 @@ This link connects the knee axis to the wheel axis. The design of this link incl
 	\label{fig:wheelkneelink3}
 \end{figure}
 
+
+\newpage
+\subsection{Boards Mounting rack}
+% Discuss the design of the Boards Mounting rack.
+The boards mounting rack is designed to hold the power distribution board, the microcontroller board, and the Raspberry Pi.
+The rack is designed to be mounted on the body of the robot.
+%figure 1 for the PCB_Rack
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.5\linewidth]{PCB_Rack_1}
+	\caption[Side view of the PCB Rack]{TOP view of the PCB Rack}
+	\label{fig:pcbrack1}
+\end{figure}
+%figure 2 for the PCB_Rack
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.5\linewidth]{PCB_Rack_2}
+	\caption[Top view of the PCB Rack]{Side view of the PCB Rack}
+	\label{fig:pcbrack2}
+\end{figure}
+%figure 3 for the PCB_Rack
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.5\linewidth]{PCB_Rack_3}
+	\caption[3D view of the PCB Rack]{3D view of the PCB Rack}
+	\label{fig:pcbrack3}
+\end{figure}
+\newpage
+\subsection{Motor Cover}
+%fugure 1 for the motor_cover
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.5\linewidth]{motor_cover_1}
+	\caption[Side view of the Motor Cover]{Side view of the Motor Cover}
+	\label{fig:motorcover1}
+\end{figure}
+%fugure 2 for the motor_cover
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.5\linewidth]{motor_cover_2}
+	\caption[Top view of the Motor Cover]{Top view of the Motor Cover}
+	\label{fig:motorcover2}
+\end{figure}
+%fugure 3 for the motor_cover
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.5\linewidth]{motor_cover_3}
+	\caption[3D view of the Motor Cover]{3D view of the Motor Cover}
+	\label{fig:motorcover3}
+\end{figure}
+
+
+\newpage
 \subsection{Full Design}
 
 
@@ -228,10 +282,11 @@ This link connects the knee axis to the wheel axis. The design of this link incl
 	\caption[3D view of the Robot Assembly]{3D view of the Robot Assembly}
 	\label{fig:robotassembly3}
 \end{figure}
-\subsection{Boards Mounting rack}
+
 \subsection{Safety considerations}
 % the motor cover, the face shield of the body and the body cover
-Safety is a crucial aspect to consider in the design of the robot. The robot is designed to be safe to operate in the environment and safe to interact with humans. Clearences are considered in the design to make sure that moving parts wouldn't interfere with eachother.
+Safety is a crucial aspect to consider in the design of the robot.
+The robot is designed to be safe to operate in the environment and safe to interact with humans. Clearences are considered in the design to make sure that moving parts wouldn't interfere with eachother.
 The motor cover is designed to protect the motor from any external objects that might interfere with the motor operation.
 %Two subfigures side by side of the motor cover
 
